# ViT-train

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
script/: make_dataset.sh  train.sh
src/: make_dataset.py  predict.py  train.py  util.py
